...
                      color: color.palette.textClassicColor,
                      fontFamily: 'Geometria',
                      textAlign: 'center',
                      textAlignVertical: 'center',
                      marginBottom: spacing[4],
                    }}
                    testID='payment-url'
                  />
                </View>
                <View style={{ height: 20, alignItems: 'center' }}>
                  <Text
                    text={`reference:  ${reference}`}
                    style={{
...
