...
            <FormField
              name='phoneNumber'
              inputStyle={[PHONE_NUMBER_STYLE, errors.phoneNumber && INVALID_PHONE_NUMBER]}
              placeholderTx='signInScreen.hint'
              keyboardType='phone-pad'
              labelTx='signInScreen.labels.phoneNumber'
              testID='phone-number'
            />
            <Button testID='submit-button' style={[CONTINUE]} textStyle={CONTINUE_TEXT} tx='signInScreen.confirm' onPress={() => handleSubmit()} />
          </>
        );
      }}
    </Formik>
  );
};
...
